# starting-ragchatbot-codebase

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  frontend-changes.md  pyproject.toml  verify_tests.py
.claude/: settings.local.json
backend/: app.py  debug_links.py  search_tools.py
backend/tests/: conftest.py  test_api_endpoints.py  test_rag_system.py
frontend/: index.html  script.js  style.css
scripts/: format.py  lint.py  quality-check.bat  quality-check.sh
